# cofounder

./: .gitignore  PLAN.md  README.md  cofounder-ideation.md
.claude/: launch.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: sync-core-assets.mjs
app/src/: App.tsx  index.css  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/lib/: markdown.ts  tauri.ts
app/src/lib/cofounder/: assets.ts  bootstrap.ts  config.ts  dispatch.ts  extraRest.ts  roles.ts
app/src/lib/hermes/: auth.ts  base.ts  index.ts  rest.ts  sessions.ts  types.ts  ws.ts
app/src/state/: chat.ts  connection.ts  delegations.ts  log.ts  tasks.ts
app/src/views/: AppShell.tsx  CanvasView.tsx  DebugChat.tsx  Onboarding.tsx  RightPanel.tsx
app/src/views/chat/: LogsDrawer.tsx  SessionSwitcher.tsx  taskTags.ts
app/src/views/department/: AgentWorkspaceView.tsx  DepartmentScratchpadView.tsx  DepartmentTasksView.tsx  DepartmentView.tsx
core/: bootstrap.md  connectors.json
core/orchestrator/: SOUL.md
core/skills/finance/: SKILL.md
core/skills/marketing/: SKILL.md
core/skills/operations/: SKILL.md
core/skills/research/: SKILL.md
core/skills/support/: SKILL.md
core/workspace-template/.cofounder/: decisions.md
core/workspace-template/marketing/: README.md
core/workspace-template/operations/: README.md
core/workspace-template/research/: README.md
core/workspace-template/sales/: README.md
core/workspace-template/shared/: README.md
(+12 files in other folders)
