[package]
name = "cofounder"
version = "0.1.0"
description = "Cofounder — your full company in software"
authors = ["Cofounder"]
edition = "2021"

[lib]
name = "cofounder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"

[profile.release]
opt-level = "s"
lto = true
strip = true
